--- a/css/global.css
+++ b/css/global.css
@@ -392,7 +392,7 @@ ul.menu li {
   font-style: italic;
   font-weight: bold;
   line-height: 1.3em;
-  margin-top: 14px;
+  margin-bottom: 14px;
 }
 
 .node .author span {
